--- a/main.html
+++ b/main.html
@@ -7,10 +7,10 @@
       miro.initialize({
         extensionPoints: {
           bottomBar: {
-            title: 'Some title',
-            svgIcon: '<circle cx="12" cy="12" r="9" fill="none" fill-rule="evenodd" stroke="currentColor" stroke-width="2"/>',
+            title: 'Wrike Tasks',
+            svgIcon: '<circle cx="12" cy="12" r="9" fill="none" fill-rule="evenodd" stroke="Green" stroke-width="2"/>',
             onClick: () => {
-              alert('Hi!')
+              alert('Hello')
             }
           }
         }
