--- a/main.html
+++ b/main.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <script type="text/javascript" src="https://miro.com/app/static/sdk.1.1.js"></script>
-    <script type="text/javascript">
-    miro.onReady(() => {
-      miro.initialize({
-        extensionPoints: {
-          bottomBar: {
-            title: 'Wrike Tasks',
-            svgIcon: '<circle cx="12" cy="12" r="9" fill="none" fill-rule="evenodd" stroke="Green" stroke-width="2"/>',
-            onClick: () => {
-              alert('Hello')
-            }
-          }
-        }
+  <head> </head>
+  <body>
+    <script src="https://miro.com/app/static/sdk.1.1.js"></script>
+    <script>
+      const icon =
+        '<path fill="currentColor" d="M12 2.617L2.617 12 12 21.383 21.383 12 12 2.617zm.707-2.121l10.797 10.797a1 1 0 0 1 0 1.414L12.707 23.504a1 1 0 0 1-1.414 0L.496 12.707a1 1 0 0 1 0-1.414L11.293.496a1 1 0 0 1 1.414 0z"></path>'
+      const sidebarUrl = 'sidebar.html'
+
+      miro.onReady(() => {
+        miro.initialize({
+          extensionPoints: {
+            bottomBar: {
+              title: 'Importer',
+              svgIcon: icon,
+              onClick: function () {
+                miro.board.ui.openLeftSidebar(sidebarUrl)
+              },
+            },
+          },
+        })
       })
-    })
     </script>
-</head>
+  </body>
 </html>
